--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   fl_chart: ^0.68.0 # Added for charting
   share_plus: ^7.2.2 # Added for sharing functionality
   path_provider: ^2.1.3 # Added for temporary file paths
+  sqflite: ^2.4.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
